# fix-rs

./: Cargo.toml  LICENSE  README.md
src/: args.rs  dictionary.rs  field.rs  filter.rs  formatter.rs  main.rs  parser.rs
src/parser/: begin_string.rs  field.rs  message.rs  state.rs  tag.rs
test-data/: messages.txt
