[package]
name = "fix"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
insta = "1.46.0"

[lints.clippy]
indexing_slicing          = "deny"
fallible_impl_from        = "deny"
wildcard_enum_match_arm   = "deny"
unneeded_field_pattern    = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate        = "deny"
